--- a/style.css
+++ b/style.css
@@ -24,3 +24,32 @@ body {
   border: 1px solid rgb(0, 89, 255);
   border-radius: 5px;
 }
+
+.grandParent {
+  width: 300px;
+  height: 300px;
+  background-color: brown;
+  position: relative;
+  border: 2px solid saddlebrown;
+  border-radius: 10px;
+}
+
+.parent {
+  width: 200px;
+  height: 200px;
+  background-color: rgb(230, 197, 12);
+  position: absolute;
+  transform: translate(50px, 50px);
+  border: 2px solid saddlebrown;
+  border-radius: 10px;
+}
+
+.child {
+  width: 100px;
+  height: 100px;
+  background-color: rgb(12, 230, 23);
+  position: absolute;
+  transform: translate(50px, 50px);
+  border: 2px solid rgb(230, 197, 12);
+  border-radius: 10px;
+}
