--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ body {
 
 .event-container {
   display: flex;
-  justify-content: space-evenly;
-  width: 40vw;
+  justify-content: space-around;
+  width: 100vw;
 }
 
 .event-text {
